Fixed Scroll bar on main table
Scroll bar was always showing, so #dataTable width was changed to
99.99% so the table doesn't force a scrollbar to appear. Also,
overflow:scroll was changed to overflow:auto for proper behavior

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,9 @@ body {
 
 #dataTableBody
 {
-  /*display:none;*/
+}
+#dataTable {
+  width: 99.99%;  /* No scroll bar */
 }
 #dataTable>tbody>tr>td, .propTable>tbody>tr>td, .propLabel>td{
   white-space:nowrap;
@@ -223,8 +225,9 @@ body {
 }
 
 .table-responsive {
-  overflow:scroll;
+  overflow:auto;
 }
+
 
 .sidebar {
   max-width:145px;
